quorum/test/tests/templating/Fail/D_9.quorum
class D is B<number>, C<integer>

end